--- a/web/pom.xml
+++ b/web/pom.xml
@@ -26,11 +26,11 @@
                     <!--<scanIntervalSeconds>2</scanIntervalSeconds>-->
                     <stopPort>9999</stopPort>
                     <webAppConfig>
-                        <contextPath>/${project.build.finalName}</contextPath>
+                        <contextPath>/</contextPath>
                     </webAppConfig>
                     <connectors>
                         <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
-                            <port>9080</port>
+                            <port>80</port>
                             <!--<maxIdleTime>60000</maxIdleTime>-->
                         </connector>
                     </connectors>
@@ -237,7 +237,7 @@
                 <jpa.generateDdl>false</jpa.generateDdl>
                 <jpa.database>MYSQL</jpa.database>
                 <jpa.databasePlatform>org.hibernate.dialect.MySQL5InnoDBDialect</jpa.databasePlatform>
-                <log.dir>D:/workspace/platform/es-czd</log.dir>
+                <log.dir>D:/workspace/platform/es-czd/web/logs</log.dir>
 
                 <shiro.uid.cookie.domain></shiro.uid.cookie.domain>
                 <shiro.uid.cookie.path>/</shiro.uid.cookie.path>
