增加删除数据库 drop-db.bat 处理

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -119,6 +119,9 @@
                     <dbUpdateScriptsDirectory>
                         <param>src/main/sql/update</param>
                     </dbUpdateScriptsDirectory>
+                    <dbDropStatements>
+                        drop database ${db.name};
+                    </dbDropStatements>
                     <dbCreateStatements>
                         create database ${db.name} CHARACTER SET 'utf8';
                     </dbCreateStatements>
